--- a/index.html
+++ b/index.html
@@ -1,488 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="" />
-<meta name="author" content="" />
-<title>Protocolo Zero Barriga</title>
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<link rel="shortcut icon" href="images/fav.ico" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-<link href="css/bootstrap.css" rel="stylesheet" />
-<link href="css/style.css" rel="stylesheet" />
-<link href="css/responsive.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Dosis:wght@200;300;400;500;600;700;800&family=Oswald:wght@200;300;400;500;600;700&family=Signika:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-<script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
-      fbq("init", "391834902396799");
-      fbq("track", "PageView");
+    <link rel="stylesheet" href="./assets/css/com.css">
+
+    <!-- Título da Página -->
+    <title>Protocolo Sem Gordura</title>
+    
+    <style type="text/css">
+      body {
+        color: white;
+        background-image: url("assets/img/bg.jpeg");
+        background-color: rgba(0, 0, 0, 0.6);
+        background-position: center;
+        background-size: cover;
+        background-attachment: fixed;
+        background-blend-mode: darken;
+      }
+    </style>
+
+  </head>
+  <body>
+    
+    <header class="py-4">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 text-center">
+            <!-- Imagem Ultrasecreto -->
+            <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
+
+            <!-- Headline -->
+            <h3 class="my-4"><b>Simples Vitamina de 9 Ingredientes Derrete Muita Gordura</b></h3>
+
+            <!-- VSL -->
+            asdsdasdasa8f7e000965d88e">var s=document.createElement("script");s.src="https://cdn.converteai.net/8b03b5e9-1e95-4b45-9063-037ac9b350ab/players/6226ac18aa8f7e000965d88e/player.js",s.async=!0,document.head.appendChild(s);</script>
+
+            <!-- Botão -->
+            <div id="cta1" class="mt-4 d-none">
+              <a href="https://pay.kiwify.com.br/8yj82EU" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">QUERO OBTER ACESSO!</span>
+                <span class="span-btn2">(atenção: vagas limitadas)</span>
+              </a>
+            </div>
+
+            <!-- Termos de Uso e Política de Privacidade -->
+            <div class="text-white mt-4"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <script type="text/javascript">
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 2000); // temporização da Call to Action (em milissegundos)
     </script>
-<noscript><img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=391834902396799&ev=PageView&noscript=1"
-    /></noscript>
 
-</head>
-<body>
-
-<section class="six-header">
-<div class="site-width container title">
-<img class="img-fluid mb-5" src="./images/ultrasecreto.svg" />
-<h1><span>6 Ingredientes Simples Que Fazem O Corpo Queimar Até </span>13Kg <span>Em</span> 30 Dias</h1>
-<div class="video-here">
-<script type="text/javascript" id="scr_625251ad752ce700089a16ca">
-            var s = document.createElement("script");
-            (s.src =
-              "https://cdn.converteai.net/41c56382-0570-4737-b589-12716ba60ca0/players/625251ad752ce700089a16ca/player.js"),
-              (s.async = !0),
-              document.head.appendChild(s);
-          </script>
-</div>
-<div id="cta1" class="cta1 mt-4 d-none">
-<a href="https://pay.kiwify.com.br/96dtTAP" class="a-btn" style="text-decoration: none">
-<span class="span-btn">QUERO PERDER PESO AGORA!</span>
-<span class="span-btn2">( Atenção: poucas vagas restantes... )</span>
-</a>
-</div>
-</div>
-</section>
-<section class="comments py-4">
-<div class="container">
-<div class="row justify-content-center">
-<div class="col-lg-8">
-<div class="fb-comments" style="margin-top: 5px">
-<div class="fb-comments-header">
-<span>21 comentarios</span>
-</div>
-<div class="fb-comments-wrapper" id="2">
-<table class="fb-comments-comment">
-<tbody>
-<tr>
-<td rowspan="3" class="fb-comments-comment-img">
-<img src="./images/comentarios/m2.jpeg" />
-</td>
-<td>
-<font class="fb-comments-comment-name">
-<name>Valesca Silva</name>
-</font>
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-text">
-Amei vou fazer hoje mesmo pois estou em processo de emagrecimento. Muito obrigada 😘
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-actions">
-<like>Curtir</like>
-·
-<reply>Responder</reply>
-·
- <likes>8</likes>
-<date>4 min</date>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div class="fb-comments-wrapper" id="3">
-<table class="fb-comments-comment">
-<tbody>
-<tr>
-<td rowspan="3" class="fb-comments-comment-img">
-<img src="./images/comentarios/m3.jpeg" />
-</td>
-<td>
-<font class="fb-comments-comment-name">
-<name>Vitória Pereira</name>
-</font>
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-text">
-Ele também me ajudou perdi 22kg obrigado, e ajuda até hoje com essas receitas deliciosas
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-actions">
-<like>Curtir</like>
-·
-<reply>Responder</reply>
-·
-<likes>9</likes>
-<date>5 min</date>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div class="fb-comments-wrapper" id="4">
-<table class="fb-comments-comment">
-<tbody>
-<tr>
-<td rowspan="3" class="fb-comments-comment-img">
-<img src="./images/comentarios/m4.jpeg" />
-</td>
-<td>
-<font class="fb-comments-comment-name">
-<name>Mariana Martins</name>
-</font>
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-text">
-Esse vídeo mudou minha vida, já são 20 kilos a menos em 4 meses ,agradecida
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-actions">
-<like>Curtir</like>
-·
-<reply>Responder</reply>
-·
-<likes>11</likes>
-<date>12 min</date>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div class="fb-comments-wrapper" id="5">
-<table class="fb-comments-comment">
-<tbody>
-<tr>
-<td rowspan="3" class="fb-comments-comment-img">
-<img src="./images/comentarios/m5.jpeg" />
-</td>
-<td>
-<font class="fb-comments-comment-name">
-<name>Juliana Castro</name>
-</font>
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-text">
-Tomei essa vitamina durante 1 mês, acompanhada da dieta de açúcar e carboidratos, perdir 5
-quilos, e me sentia bem melhor, faz um ano, agora vou voltar a tomar novamente.
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-actions">
-<like>Curtir</like>
-·
-<reply>Responder</reply>
-·
-<likes>15</likes>
-<date>19 min</date>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div class="fb-comments-wrapper" id="6">
-<table class="fb-comments-comment">
-<tbody>
-<tr>
-<td rowspan="3" class="fb-comments-comment-img">
-<img src="./images/comentarios/m6.jpeg" />
-</td>
-<td>
-<font class="fb-comments-comment-name">
-<name>Isabella Lopes</name>
-</font>
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-text">
-Estou feliz, a 7 meses atrás eu estava com 78kg e hoje estou com 54kg até postei a respeito no
-meu perfil aqui no face o antes e depois 😘😘😘
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-actions">
-<like>Curtir</like>
-·
-<reply>Responder</reply>
-·
-<likes>17</likes>
-<date>24 min</date>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div class="fb-comments-wrapper" id="7">
-<table class="fb-comments-comment">
-<tbody>
-<tr>
-<td rowspan="3" class="fb-comments-comment-img">
-<img src="./images/comentarios/m7.jpeg" />
-</td>
-<td>
-<font class="fb-comments-comment-name">
-<name>Roberta Gomes</name>
-</font>
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-text">
-Realmente funciona, minha barriga tem diminuído a cada dia. Obrigada por compartilhar 🥰
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-actions">
-<like>Curtir</like>
-·
-<reply>Responder</reply>
-·
-<likes>18</likes>
-<date>26 min</date>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div class="fb-comments-wrapper" id="9">
-<table class="fb-comments-comment">
-<tbody>
-<tr>
-<td rowspan="3" class="fb-comments-comment-img">
-<img src="./images/comentarios/m11.jpeg" />
-</td>
-<td>
-<font class="fb-comments-comment-name">
-<name>Rafaela Souza</name>
-</font>
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-text">Emagrece mesmo gente receita testada e aprovada</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-actions">
-<like>Curtir</like>
-·
-<reply>Responder</reply>
-·
-<likes>22</likes>
-<date>39 min</date>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-<button class="fb-comments-loadmore" onclick="javascript:loadMore();">Carregar mais 5 comentários</button>
-<div style="display: none" id="more">
-<div class="fb-comments-wrapper">
-<table class="fb-comments-comment" id="10">
-<tbody>
-<tr>
-<td rowspan="3" class="fb-comments-comment-img">
-<img src="./images/comentarios/m12.jpeg" />
-</td>
-<td>
-<font class="fb-comments-comment-name">
-<name>Ana Sofia</name>
-</font>
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-text">
-Maravilhosa melhor de todas fez 7dias tomando e 7 klos já conseguir eliminar tô muito feliz
-obrigado 😍😍😍
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-actions">
-<like>Curtir</like>
-·
-<reply>Responder</reply>
-·
-<likes>41</likes>
-<date>1 h</date>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div class="fb-comments-wrapper" id="11">
-<table class="fb-comments-comment">
-<tbody>
-<tr>
-<td rowspan="3" class="fb-comments-comment-img">
-<img src="./images/comentarios/m15.jpeg" />
-</td>
-<td>
-<font class="fb-comments-comment-name">
-<name>Laura Flores</name>
-</font>
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-text">
-Eu já estou tomando, já eliminei 7 kls, já fez muita diferença, minhas roupas estavam todas
-apertadas, ágora já estão largas, estou num pós operatório de coluna por isso engordei muito
-15 Kg, estava sentindo muita dor agora amenizou muito depois que emagreci já consigo andar
-mais q antes 🙏🙏🙏🙏🙏🙏
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-actions">
-<like>Curtir</like>
-·
-<reply>Responder</reply>
-·
-<likes>40</likes>
-<date>1 h</date>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div class="fb-comments-wrapper" id="12">
-<table class="fb-comments-comment">
-<tbody>
-<tr>
-<td rowspan="3" class="fb-comments-comment-img">
-<img src="./images/comentarios/m16.jpeg" />
-</td>
-<td>
-<font class="fb-comments-comment-name">
-<name>Daniela Costa</name>
-</font>
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-text">
-Muito Obrigada tem me ajudado e muito,Adorei ...Durmo super bem e vendo resultado ..🌹🥰🙋
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-actions">
-<like>Curtir</like> 
-·
-<reply>Responder</reply>
-·
-<likes>47</likes>
-<date>1 h</date>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div class="fb-comments-wrapper" id="13">
-<table class="fb-comments-comment">
-<tbody>
-<tr>
-<td rowspan="3" class="fb-comments-comment-img">
-<img src="./images/comentarios/m17.jpeg" />
-</td>
-<td>
-<font class="fb-comments-comment-name">
-<name>Juliana Dias</name>
-</font>
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-text">Em duas semanas comecei a ver resultados, muito bom</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-actions">
-<like>Curtir</like>
-·
-<reply>Responder</reply>
-·
-<likes>50</likes>
-<date>1 h</date>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div class="fb-comments-wrapper">
-<table class="fb-comments-comment" id="14">
-<tbody>
-<tr>
-<td rowspan="3" class="fb-comments-comment-img">
-<img src="./images/comentarios/m18.jpeg" />
-</td>
-<td>
-<font class="fb-comments-comment-name">
-<name>Isabelle Correia</name>
-</font>
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-text">
-Meu irmão perdeu 6 kl em 15 dias... vou começar hj rsrs
-</td>
-</tr>
-<tr>
-<td class="fb-comments-comment-actions">
-<like>Curtir</like>
-·
-<reply>Responder</reply>
-·
-<likes>66</likes>
-<date>1 h</date>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</div>
-</div>
-
-<div id="cta2" class="mt-4 d-none">
-<a href="https://pay.kiwify.com.br/96dtTAP" class="a-btn" style="text-decoration: none">
-<span class="span-btn">QUERO OBTER ACESSO!</span>
-<span class="span-btn2">(atenção: vagas limitadas)</span>
-</a>
-</div>
-</div>
-</div>
-</div>
-</section>
-
-<section class="cr">
-<div class="site-width" style="padding: 10px">
-<p>
-<a href="termos.html" style="color: #fff !important">Termos de Uso</a> |
-<a href="privacidade.html" style="color: #fff !important">Política de Privacidade</a>
-</p>
-<hr />
-<p>
-© 2022 – Todos os direitos reservados. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma
-marca comercial da Facebook, Inc.
-</p>
-</div>
-</section>
-<script type="text/javascript">
-      setTimeout(() => {
-        document.getElementById("cta1").classList.remove("d-none");
-        document.getElementById("cta2").classList.remove("d-none");
-      }, 1290000);
-    </script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="./js/javascript.js"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="./assets/js/com.js"></script>
+  </body>
 </html>
