--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <link rel="shortcut icon" href="images/fav.ico" />
 
-<link href="css/bootstrap.css" rel="stylesheet" />
-<link href="css/style.css" rel="stylesheet" />
-<link href="css/responsive.css" rel="stylesheet" />
+<link href="./css/bootstrap.css" rel="stylesheet" />
+<link href="./css/style.css" rel="stylesheet" />
+<link href="./css/responsive.css" rel="stylesheet" />
 
 <script>
       !(function (f, b, e, v, n, t, s) {
