--- a/quiz/index.html
+++ b/quiz/index.html
@@ -98,7 +98,7 @@ marca comercial da Facebook, Inc.
         s = b.getElementsByTagName(e)[0];
         s.parentNode.insertBefore(t, s);
       })(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
-      fbq("init", "391834902396799");
+      fbq("init", "################");
       fbq("track", "AddToCart");
     </script>
 <noscript><img
