--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,11 +8,11 @@
 <meta name="author" content="" />
 <title>Protocolo Zero Barriga</title>
 
-<link rel="shortcut icon" href="/images/fav.ico" />
+<link rel="shortcut icon" href="./images/fav.ico" />
 
-<link href="/css/bootstrap.css" rel="stylesheet" />
-<link href="/css/style.css" rel="stylesheet" />
-<link href="/css/responsive.css" rel="stylesheet" />
+<link href="./css/bootstrap.css" rel="stylesheet" />
+<link href="./css/style.css" rel="stylesheet" />
+<link href="./css/responsive.css" rel="stylesheet" />
 
 <script>
       !(function (f, b, e, v, n, t, s) {
@@ -31,7 +31,7 @@
         s = b.getElementsByTagName(e)[0];
         s.parentNode.insertBefore(t, s);
       })(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
-      fbq("init", "391834902396799");
+      fbq("init", "#############");
       fbq("track", "PageView");
     </script>
 <noscript><img
@@ -58,7 +58,7 @@
           </script>
 </div>
 <div id="cta1" class="cta1 mt-4 d-none">
-<a href="https://pay.kiwify.com.br/96dtTAP" class="a-btn" style="text-decoration: none">
+<a href="#################" class="a-btn" style="text-decoration: none">
 <span class="span-btn">QUERO PERDER PESO AGORA!</span>
 <span class="span-btn2">( Atenção: poucas vagas restantes... )</span>
 </a>
@@ -453,7 +453,7 @@ Meu irmão perdeu 6 kl em 15 dias... vou começar hj rsrs
 </div>
 
 <div id="cta2" class="mt-4 d-none">
-<a href="https://pay.kiwify.com.br/96dtTAP" class="a-btn" style="text-decoration: none">
+<a href="###########" class="a-btn" style="text-decoration: none">
 <span class="span-btn">QUERO OBTER ACESSO!</span>
 <span class="span-btn2">(atenção: vagas limitadas)</span>
 </a>
@@ -480,7 +480,7 @@ marca comercial da Facebook, Inc.
       setTimeout(() => {
         document.getElementById("cta1").classList.remove("d-none");
         document.getElementById("cta2").classList.remove("d-none");
-      }, 1290000);
+      }, 2000);
     </script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="./js/javascript.js"></script>
