--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 <img class="img-fluid mb-5" src="./images/ultrasecreto.svg" />
 <h1><span>6 Ingredientes Simples Que Fazem O Corpo Queimar Até </span>13Kg <span>Em</span> 30 Dias</h1>
 <div class="video-here">
-<script type="text/javascript" id="scr_625251ad752ce700089a16ca">
+/*<script type="text/javascript" id="scr_625251ad752ce700089a16ca">
             var s = document.createElement("script");
             (s.src =
               "https://cdn.converteai.net/41c56382-0570-4737-b589-12716ba60ca0/players/625251ad752ce700089a16ca/player.js"),
               (s.async = !0),
               document.head.appendChild(s);
-          </script>
+          </script>*/
 </div>
 <div id="cta1" class="cta1 mt-4 d-none">
 <a href="#################" class="a-btn" style="text-decoration: none">
