--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         height="1"
         width="1"
         style="display: none"
-        src="https://www.facebook.com/tr?id=391834902396799&ev=PageView&noscript=1"
+        src="https://www.facebook.com/tr?id=391####2396799&ev=PageView&noscript=1"
     /></noscript>
 
 </head>
@@ -52,7 +52,7 @@
 <script type="text/javascript" id="scr_62622d409aee5a0009849be0">var s=document.createElement("script");s.src="https://scripts.converteai.net/39b395bf-3dcc-41ac-b07f-d0142874731d/players/62622d409aee5a0009849be0/player.js",s.async=!0,document.head.appendChild(s);</script>
 </div>
 <div id="cta1" class="cta1 mt-4 d-none">
-<a href="#################" class="a-btn" style="text-decoration: none">
+<a href="https://pay.kiwify.com.br/bFVM10e" class="a-btn" style="text-decoration: none">
 <span class="span-btn">QUERO PERDER PESO AGORA!</span>
 <span class="span-btn2">( Atenção: poucas vagas restantes... )</span>
 </a>
@@ -447,7 +447,7 @@ Meu irmão perdeu 6 kl em 15 dias... vou começar hj rsrs
 </div>
 
 <div id="cta2" class="mt-4 d-none">
-<a href="###########" class="a-btn" style="text-decoration: none">
+<a href="https://pay.kiwify.com.br/bFVM10e" class="a-btn" style="text-decoration: none">
 <span class="span-btn">QUERO OBTER ACESSO!</span>
 <span class="span-btn2">(atenção: vagas limitadas)</span>
 </a>
