--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-      <script>
-  window.location.replace("https://www.takethislollipop.com/");
+ <script>
+  window.location.replace("https://soulcollection.io/exp");
 </script>
 <head>
 <meta charset="utf-8" />
